--- a/_config.yml
+++ b/_config.yml
@@ -18,12 +18,12 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 locale                   : "en-US"
 title                    : "Junghoon의 개발일지"
 title_separator          : "-"
-subtitle                 : # site tagline that appears below site title in masthead
-name                     : "Your Name"
-description              : "An amazing website."
-url                      : "https://jhyj0521.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+subtitle                 : "정훈의 스터디 로그"
+name                     : "Junghoon Lee"
+description              : "자바와 웹 서버 개발을 꿈꾸는 개발자의 log입니다."
+url                      : "https://jhyj0521.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+repository               : "jhyj0521/jhyj0521.github.io"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
