--- a/_config.yml
+++ b/_config.yml
@@ -93,10 +93,10 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
+  name             : "Lee Junghoon"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an **amazing** person."
-  location         : "Somewhere"
+  bio              : "꾸준하게 발전하는 개발자"
+  location         : "Gyeonggi, Korea"
   email            :
   links:
     - label: "Email"
