--- a/_config.yml
+++ b/_config.yml
@@ -15,10 +15,10 @@
 minimal_mistakes_skin    : "dirt" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
-locale                   : "en-US"
+locale                   : "ko-KR"
 title                    : "Junghoon의 개발일지"
 title_separator          : "-"
-subtitle                 : "정훈의 스터디 로그"
+subtitle                 : "우리가 두려워해야 하는 것은 느리게 가는 것이 아니라 멈추는 것이어야 한다"
 name                     : "Junghoon Lee"
 description              : "자바와 웹 서버 개발을 꿈꾸는 개발자의 log입니다."
 url                      : "https://jhyj0521.github.io"
@@ -26,7 +26,7 @@ baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "jhyj0521/jhyj0521.github.io"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
-masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
+masthead_title           : "정훈의 스터디 로그"
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
 comments:
@@ -209,7 +209,7 @@ sass:
 permalink: /:categories/:title/
 paginate: 5 # amount of posts to show
 paginate_path: /page:num/
-timezone: Asia/Seoul # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+timezone: # Asia/Seoul # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
 
 # Plugins (previously gems:)
