--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -27,7 +27,7 @@ words_per_minute         : 200
 comments:
   provider               : "disqus" # false (default), "disqus", "discourse", "facebook", "staticman_v2", "staticman", "utterances", "custom"
   disqus:
-    shortname            : jhyj0521.github.io # https://help.disqus.com/customer/portal/articles/466208-what-s-a-shortname-
+    shortname            : jhyj0521 # https://help.disqus.com/customer/portal/articles/466208-what-s-a-shortname-
   discourse:
     server               : # https://meta.discourse.org/t/embedding-discourse-comments-via-javascript/31963 , e.g.: meta.discourse.org
   facebook:
