--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "jhyj0521/jhyj0521.github.io"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
-masthead_title           : "정훈의 스터디 로그"
+masthead_title           : "정훈의 디벨로그"
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
 comments:
