--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ title                    : "Junghoon의 개발일지"
 title_separator          : "-"
 subtitle                 : "우리가 두려워해야 하는 것은 느리게 가는 것이 아니라 멈추는 것이어야 한다"
 name                     : "Junghoon"
-description              : "자바와 웹 서버 개발을 꿈꾸는 개발자의 log입니다."
+description              : "프론트엔드 개발자의 log"
 url                      : "https://jhyj0521.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "jhyj0521/jhyj0521.github.io"
